--- a/Vishal-Algotrading/Vishal-Algotrading.ipynb
+++ b/Vishal-Algotrading/Vishal-Algotrading.ipynb
@@ -992,8 +992,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0182c0ca-f63d-46ba-9d53-8b7954faa1a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from finta import TA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "460ab37d-93de-4ffd-ac8b-7a193b2ab9ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ema3 = TA.EMA(historical_data, period=3)\n",
+    "ema5 = TA.EMA(historical_data, period=5)\n",
+    "ema8 = TA.EMA(historical_data,period=8)\n",
+    "ema13 = TA.EMA(historical_data,period=13)\n",
+    "\n",
+    "historical_data['ema-3']=ema3\n",
+    "historical_data['ema-5']=ema5\n",
+    "historical_data['ema-8']=ema8\n",
+    "historical_data['ema-13']=ema13\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6f2fa083-a63a-4056-9154-07f7160140cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>trade_count</th>\n",
+       "      <th>vwap</th>\n",
+       "      <th>delta</th>\n",
+       "      <th>Predicted</th>\n",
+       "      <th>entry/exit</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>ema-3</th>\n",
+       "      <th>ema-5</th>\n",
+       "      <th>ema-8</th>\n",
+       "      <th>ema-13</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 09:00:00+00:00</th>\n",
+       "      <td>209.43</td>\n",
+       "      <td>209.44</td>\n",
+       "      <td>209.24</td>\n",
+       "      <td>209.3000</td>\n",
+       "      <td>30375</td>\n",
+       "      <td>82</td>\n",
+       "      <td>209.322606</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>64.376590</td>\n",
+       "      <td>209.300000</td>\n",
+       "      <td>209.300000</td>\n",
+       "      <td>209.300000</td>\n",
+       "      <td>209.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 10:00:00+00:00</th>\n",
+       "      <td>209.30</td>\n",
+       "      <td>209.36</td>\n",
+       "      <td>209.07</td>\n",
+       "      <td>209.3600</td>\n",
+       "      <td>54490</td>\n",
+       "      <td>118</td>\n",
+       "      <td>209.214253</td>\n",
+       "      <td>0.0600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>64.376590</td>\n",
+       "      <td>209.340000</td>\n",
+       "      <td>209.336000</td>\n",
+       "      <td>209.333750</td>\n",
+       "      <td>209.332308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 11:00:00+00:00</th>\n",
+       "      <td>209.37</td>\n",
+       "      <td>209.65</td>\n",
+       "      <td>209.37</td>\n",
+       "      <td>209.4400</td>\n",
+       "      <td>44404</td>\n",
+       "      <td>109</td>\n",
+       "      <td>209.526441</td>\n",
+       "      <td>0.0800</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>64.376590</td>\n",
+       "      <td>209.397143</td>\n",
+       "      <td>209.385263</td>\n",
+       "      <td>209.378342</td>\n",
+       "      <td>209.373858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 12:00:00+00:00</th>\n",
+       "      <td>209.45</td>\n",
+       "      <td>209.59</td>\n",
+       "      <td>209.33</td>\n",
+       "      <td>209.5100</td>\n",
+       "      <td>111106</td>\n",
+       "      <td>234</td>\n",
+       "      <td>209.460429</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>64.376590</td>\n",
+       "      <td>209.457333</td>\n",
+       "      <td>209.437077</td>\n",
+       "      <td>209.424486</td>\n",
+       "      <td>209.416118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 13:00:00+00:00</th>\n",
+       "      <td>209.52</td>\n",
+       "      <td>209.67</td>\n",
+       "      <td>209.27</td>\n",
+       "      <td>209.3200</td>\n",
+       "      <td>426233</td>\n",
+       "      <td>645</td>\n",
+       "      <td>209.429479</td>\n",
+       "      <td>-0.1900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>64.376590</td>\n",
+       "      <td>209.386452</td>\n",
+       "      <td>209.392133</td>\n",
+       "      <td>209.392028</td>\n",
+       "      <td>209.390564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-24 19:00:00+00:00</th>\n",
+       "      <td>394.67</td>\n",
+       "      <td>395.84</td>\n",
+       "      <td>390.09</td>\n",
+       "      <td>395.7200</td>\n",
+       "      <td>19815554</td>\n",
+       "      <td>151383</td>\n",
+       "      <td>394.974732</td>\n",
+       "      <td>1.0700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>43.724526</td>\n",
+       "      <td>394.815240</td>\n",
+       "      <td>394.184390</td>\n",
+       "      <td>393.631230</td>\n",
+       "      <td>393.339405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-24 20:00:00+00:00</th>\n",
+       "      <td>395.71</td>\n",
+       "      <td>396.55</td>\n",
+       "      <td>395.50</td>\n",
+       "      <td>396.5000</td>\n",
+       "      <td>12658941</td>\n",
+       "      <td>9699</td>\n",
+       "      <td>395.531286</td>\n",
+       "      <td>0.7800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.603675</td>\n",
+       "      <td>395.657620</td>\n",
+       "      <td>394.956260</td>\n",
+       "      <td>394.268734</td>\n",
+       "      <td>393.790918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-24 21:00:00+00:00</th>\n",
+       "      <td>396.49</td>\n",
+       "      <td>396.53</td>\n",
+       "      <td>395.75</td>\n",
+       "      <td>396.4400</td>\n",
+       "      <td>565192</td>\n",
+       "      <td>852</td>\n",
+       "      <td>395.816342</td>\n",
+       "      <td>-0.0600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.442942</td>\n",
+       "      <td>396.048810</td>\n",
+       "      <td>395.450840</td>\n",
+       "      <td>394.751238</td>\n",
+       "      <td>394.169358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-24 22:00:00+00:00</th>\n",
+       "      <td>396.40</td>\n",
+       "      <td>396.46</td>\n",
+       "      <td>395.75</td>\n",
+       "      <td>396.3499</td>\n",
+       "      <td>48238</td>\n",
+       "      <td>462</td>\n",
+       "      <td>396.309149</td>\n",
+       "      <td>-0.0901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51.919519</td>\n",
+       "      <td>396.199355</td>\n",
+       "      <td>395.750527</td>\n",
+       "      <td>395.106496</td>\n",
+       "      <td>394.480864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-24 23:00:00+00:00</th>\n",
+       "      <td>396.35</td>\n",
+       "      <td>396.50</td>\n",
+       "      <td>396.29</td>\n",
+       "      <td>396.4600</td>\n",
+       "      <td>30320</td>\n",
+       "      <td>939</td>\n",
+       "      <td>396.418739</td>\n",
+       "      <td>0.1101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>53.861989</td>\n",
+       "      <td>396.329677</td>\n",
+       "      <td>395.987018</td>\n",
+       "      <td>395.407275</td>\n",
+       "      <td>394.763598</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30493 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             open    high     low     close    volume  \\\n",
+       "timestamp                                                               \n",
+       "2015-12-01 09:00:00+00:00  209.43  209.44  209.24  209.3000     30375   \n",
+       "2015-12-01 10:00:00+00:00  209.30  209.36  209.07  209.3600     54490   \n",
+       "2015-12-01 11:00:00+00:00  209.37  209.65  209.37  209.4400     44404   \n",
+       "2015-12-01 12:00:00+00:00  209.45  209.59  209.33  209.5100    111106   \n",
+       "2015-12-01 13:00:00+00:00  209.52  209.67  209.27  209.3200    426233   \n",
+       "...                           ...     ...     ...       ...       ...   \n",
+       "2023-03-24 19:00:00+00:00  394.67  395.84  390.09  395.7200  19815554   \n",
+       "2023-03-24 20:00:00+00:00  395.71  396.55  395.50  396.5000  12658941   \n",
+       "2023-03-24 21:00:00+00:00  396.49  396.53  395.75  396.4400    565192   \n",
+       "2023-03-24 22:00:00+00:00  396.40  396.46  395.75  396.3499     48238   \n",
+       "2023-03-24 23:00:00+00:00  396.35  396.50  396.29  396.4600     30320   \n",
+       "\n",
+       "                           trade_count        vwap   delta  Predicted  \\\n",
+       "timestamp                                                               \n",
+       "2015-12-01 09:00:00+00:00           82  209.322606     NaN          1   \n",
+       "2015-12-01 10:00:00+00:00          118  209.214253  0.0600          0   \n",
+       "2015-12-01 11:00:00+00:00          109  209.526441  0.0800          1   \n",
+       "2015-12-01 12:00:00+00:00          234  209.460429  0.0700          0   \n",
+       "2015-12-01 13:00:00+00:00          645  209.429479 -0.1900          1   \n",
+       "...                                ...         ...     ...        ...   \n",
+       "2023-03-24 19:00:00+00:00       151383  394.974732  1.0700          0   \n",
+       "2023-03-24 20:00:00+00:00         9699  395.531286  0.7800          0   \n",
+       "2023-03-24 21:00:00+00:00          852  395.816342 -0.0600          0   \n",
+       "2023-03-24 22:00:00+00:00          462  396.309149 -0.0901          0   \n",
+       "2023-03-24 23:00:00+00:00          939  396.418739  0.1101          0   \n",
+       "\n",
+       "                           entry/exit        rsi       ema-3       ema-5  \\\n",
+       "timestamp                                                                  \n",
+       "2015-12-01 09:00:00+00:00         NaN  64.376590  209.300000  209.300000   \n",
+       "2015-12-01 10:00:00+00:00        -1.0  64.376590  209.340000  209.336000   \n",
+       "2015-12-01 11:00:00+00:00         1.0  64.376590  209.397143  209.385263   \n",
+       "2015-12-01 12:00:00+00:00        -1.0  64.376590  209.457333  209.437077   \n",
+       "2015-12-01 13:00:00+00:00         1.0  64.376590  209.386452  209.392133   \n",
+       "...                               ...        ...         ...         ...   \n",
+       "2023-03-24 19:00:00+00:00         0.0  43.724526  394.815240  394.184390   \n",
+       "2023-03-24 20:00:00+00:00         0.0  45.603675  395.657620  394.956260   \n",
+       "2023-03-24 21:00:00+00:00         0.0  47.442942  396.048810  395.450840   \n",
+       "2023-03-24 22:00:00+00:00         0.0  51.919519  396.199355  395.750527   \n",
+       "2023-03-24 23:00:00+00:00         0.0  53.861989  396.329677  395.987018   \n",
+       "\n",
+       "                                ema-8      ema-13  \n",
+       "timestamp                                          \n",
+       "2015-12-01 09:00:00+00:00  209.300000  209.300000  \n",
+       "2015-12-01 10:00:00+00:00  209.333750  209.332308  \n",
+       "2015-12-01 11:00:00+00:00  209.378342  209.373858  \n",
+       "2015-12-01 12:00:00+00:00  209.424486  209.416118  \n",
+       "2015-12-01 13:00:00+00:00  209.392028  209.390564  \n",
+       "...                               ...         ...  \n",
+       "2023-03-24 19:00:00+00:00  393.631230  393.339405  \n",
+       "2023-03-24 20:00:00+00:00  394.268734  393.790918  \n",
+       "2023-03-24 21:00:00+00:00  394.751238  394.169358  \n",
+       "2023-03-24 22:00:00+00:00  395.106496  394.480864  \n",
+       "2023-03-24 23:00:00+00:00  395.407275  394.763598  \n",
+       "\n",
+       "[30493 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01aa586b-5a7d-469d-9097-61730f478b10",
    "metadata": {},
    "outputs": [],
    "source": []
